# -*- coding: utf-8 -*-
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@mit.edu>
# NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE

[metadata]
name = wavestate.doc
version = 0.0.0.dev0

license = Apache-2.0
license_files = LICENSES/*, NOTICE

author = Lee McCuller
author_email = mcculler@mit.edu

description = Documentation collection for wavestate. Only to be installed in develop mode.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/wavestate/wavestate-doc
project_urls =
    Bug Tracker = https://github.com/wavestate/wavestate-doc/issues
    Source Code = https://github.com/wavestate/wavestate-doc

classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Physics

[options]
setup_requires = 'setuptools>=45.0.0'
install_requires =
    sphinx_toolbox
    pytest
    wavestate.bunch
    wavestate.pytest
    wavestate.model
    wavestate.quantum
    wavestate.control
    wavestate.devel
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
devel = pytest-watch

[aliases]
test=pytest
